# clang_plugin_tests

./: CMakeLists.txt  input.sh  test_optimize.sh  test_optimize_polycc.sh
1d/alias_std_unique_ptr/: main.cpp
1d/alias_std_unique_ptr/cilk/: main.reference.cpp
1d/alias_std_unique_ptr/openacc/: main.reference.cpp
1d/alias_std_unique_ptr/openmp/: main.reference.cpp
1d/alias_std_unique_ptr/tbb/: main.reference.cpp
1d/arg/cilk/: main.reference.cpp
1d/arg_decl_and_define/openmp/: main.reference.cpp
1d/array_references/: main.cpp
1d/array_references/cilk/: main.reference.cpp
1d/array_references/openacc/: main.reference.cpp
1d/array_references/openmp/: main.reference.cpp
1d/array_references/tbb/: main.reference.cpp
1d/auto_as_type/: main.cpp
1d/auto_as_type/cilk/: main.reference.cpp
1d/auto_as_type/hpx/: main.reference.cpp
1d/auto_as_type/openacc/: main.reference.cpp
1d/auto_as_type/openmp/: main.reference.cpp
1d/auto_as_type/tbb/: main.reference.cpp
1d/classes/: main.cpp
1d/classes/cilk/: main.reference.cpp
1d/classes/openacc/: main.reference.cpp
1d/classes/openmp/: main.reference.cpp
1d/classes/tbb/: main.reference.cpp
1d/classes_member_and_function/: main.cpp
1d/classes_member_and_function/cilk/: main.reference.cpp
1d/classes_member_and_function/openacc/: main.reference.cpp
1d/classes_member_and_function/openmp/: main.reference.cpp
1d/cout_agnostic/: extra_checks.sh  main.cpp
1d/cout_agnostic/cilk/: main.reference.cpp
1d/cout_agnostic/openmp/: main.reference.cpp
1d/cout_agnostic/tbb/: main.reference.cpp
1d/cxx_true_false/: main.cpp
1d/cxx_true_false/cilk/: main.reference.cpp
1d/cxx_true_false/openacc/: main.reference.cpp
1d/cxx_true_false/openmp/: main.reference.cpp
1d/cxx_true_false/tbb/: main.reference.cpp
1d/dynamic_memory_malloc/: main.cpp
1d/dynamic_memory_malloc/cilk/: main.reference.cpp
1d/dynamic_memory_malloc/openacc/: main.reference.cpp
1d/dynamic_memory_malloc/openmp/: main.reference.cpp
1d/dynamic_memory_malloc/tbb/: main.reference.cpp
1d/dynamic_memory_new/: main.cpp  main.reference.cpp
1d/dynamic_memory_new/cilk/: main.reference.cpp
1d/function_decl/: main.cpp  main.reference.cpp
1d/fusion_assign/: main.cpp
1d/fusion_declaration/: main.cpp
1d/gemv/: main.cpp
1d/generic_lambda/: main.cpp
1d/include/: main.cpp
1d/index_subsitution/: main.cpp
1d/iterator/: main.cpp
1d/iterator_cend/: main.cpp
1d/iterator_from_std_array/: main.cpp
1d/iterator_from_std_deque/: main.cpp
1d/iterator_name_change/: main.cpp
1d/iterator_typedef/: main.cpp
1d/iterator_using/: main.cpp
1d/kill_war_war_raw/: main.cpp
1d/kill_waw_array/: main.cpp
1d/kill_waw_scalar/: main.cpp
1d/logical_operators/: main.cpp
1d/loop_with_call_cond/: main.cpp  main.reference.cpp
1d/loop_with_call_cond_pure/: extra_checks.sh  main.cpp  main.reference.cpp
1d/loop_with_call_cond_returing_non_int/: main.cpp  main.reference.cpp
1d/loop_with_call_init/: main.cpp
1d/loop_with_multiple_var_cond/: main.cpp  main.reference.cpp
1d/loop_with_var_cond/: main.cpp
1d/member_access/: main.cpp
1d/mixed_types/: main.cpp
1d/negative_backward_dep/: extra_checks.sh  main.cpp
1d/negative_call_to_non_const_member_function/: extra_checks.sh  main.cpp
1d/negative_data_dependent_condition/: main.cpp
1d/negative_forward_dep/: extra_checks.sh  main.cpp
1d/negative_kill_with_and_without/: main.cpp
1d/negative_nested_if_backward_dep/: main.cpp
1d/negative_nested_if_forward_dep/: main.cpp
1d/negative_transitive_dep/: extra_checks.sh
1d/nested_if/: main.cpp
1d/optional_arguments/: main.cpp
1d/overload_assign/: main.cpp
1d/overload_assign_component/: main.cpp  main.reference.cpp
1d/parameter_problem/: main.cpp
1d/perf_one_at_a_time/: heat.out  main.cpp
1d/perf_simple/: heat.out  main.cpp
1d/printf_agnostic/: main.cpp
1d/range_based_for_loop/: main.cpp
1d/recursive_structure/: main.cpp  main.reference.cpp
1d/reduction/: main.cpp
1d/reduction_mixed/: main.cpp
1d/reduction_mul/: main.cpp
1d/reduction_multi_sum/: main.cpp
1d/reduction_of_array/: main.cpp
1d/reference/: main.cpp
1d/reference_copy/: main.cpp
1d/return_statement_in_function/: main.cpp
1d/saxpy/: main.cpp
1d/self_erasing_statements_par/: main.cpp
1d/sim_error_floord/: main.cpp
1d/simple/: main.cpp  main.reference.cpp
1d/simple_member_access/: main.cpp  main.reference.cpp
1d/simple_multiline/: main.cpp
1d/simple_plus_comment/: main.cpp  main.reference.cpp
1d/simple_preprocessor/: main.cpp  main.reference.cpp
1d/simple_with_affine_condition/: main.cpp  main.reference.cpp
1d/simple_with_affine_condition_std_namespace/: main.cpp
1d/std_array/: main.cpp  main.reference.cpp
1d/std_basic_string/: main.cpp
1d/std_deque/: main.cpp
1d/std_uniqe_ptr/: main.cpp
1d/std_vector/: main.cpp  main.reference.cpp
1d/std_vector_as_member/: main.cpp
1d/std_vector_call_to_size/: main.cpp
1d/std_vector_referenced/: main.cpp  main.reference.cpp
1d/std_vector_unique_ptr_interaction/: main.cpp
1d/string_literals_in_function_calls/: main.cpp
1d/struct_default_copy/: main.cpp
1d/struct_in_loop/: main.cpp
1d/struct_in_loop_nested/: main.cpp
1d/template/: main.cpp
1d/template_int_parameter/: main.cpp
1d/ttt_error_continue/: main.cpp
1d/ttt_error_ref/: main.cpp
1d/typedef_hidden_std_array/: main.cpp
1d/typedef_used_in_scop/: main.cpp
1d/variable_not_zero/: main.cpp
1d/variadic_function_call/: extra_checks.sh  main.cpp  main.reference.cpp
1d/variadic_function_call_no_warning/: extra_checks.sh  main.cpp
1d/with_declaration/: main.cpp  main.reference.cpp
2d/kill_same_name/: main.cpp
2d/kill_separates_declare_from_use/: main.cpp
2d/negative_innerloop_parameter/: main.cpp
2d/sashas_problem/: main.cpp
2d/simple_2d/: main.cpp  main.reference.cpp
2d/simple_2d_vector/: main.cpp
tbb_only/no_double_include/: main.cpp
(+285 files in other folders)
